--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -1,11 +1,11 @@
 .button {
-  border-radius: 8px;
+  appearance: none;
+  border-radius: 0.5rem;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
   background-color: var(--color-button-bg);
@@ -14,9 +14,9 @@
   margin-bottom: var(--spacing);
 }
 .button:hover {
-  border-color: var(--color-link-hover);
+  outline: 0.25rem solid var(--color-outline);
 }
 .button:focus,
 .button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  outline-width: 0.5rem;
 }
