Fill some logic holes
Still not quite there yet to actually use the gitignore pattern parser.

I decided to not use a ready-made tree component.

Representation of files as a tree for state instead of a flat array of VFS node might be problematic. Path strings already provide all needed information about directory hierarchies.

--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -20,3 +20,13 @@
 .button:focus-visible {
   outline-width: 0.5rem;
 }
+.square {
+  --size: 1em;
+  --spacing: 0;
+  padding: 0;
+  aspect-ratio: 1;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  min-width: var(--size);
+}
