--- a/src/styles/TextInput.module.css
+++ b/src/styles/TextInput.module.css
@@ -7,6 +7,8 @@
 .input:disabled,
 .input:read-only {
   color: var(--color-text-muted);
+  font-weight: 900;
+  background-color: var(--color-bg-slate);
   user-select: none;
   cursor: default;
   pointer-events: none;
