--- a/src/styles/Container.module.css
+++ b/src/styles/Container.module.css
@@ -1,6 +1,8 @@
 .container {
+  width: 100%;
   max-width: var(--screen, 1280px);
   margin-left: auto;
   margin-right: auto;
-  padding: 2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
