--- a/src/styles/SpacedList.module.css
+++ b/src/styles/SpacedList.module.css
@@ -1,5 +1,5 @@
 .spacedList {
-  --list-spacing: 0.75em;
+  --list-spacing: calc(0.5 * var(--spacing));
   display: grid;
   grid-auto-flow: row;
   gap: var(--list-spacing);
@@ -16,4 +16,12 @@
 
 .horizontal.flex > * {
   flex-shrink: 0;
+}
+
+.tight {
+  --list-spacing: calc(0.25 * var(--spacing));
+}
+
+.loose {
+  --list-spacing: var(--spacing);
 }
