--- a/src/styles/TextInput.module.css
+++ b/src/styles/TextInput.module.css
@@ -1,8 +1,10 @@
 .input {
   border-radius: 0.25rem;
-  min-height: 2em;
+  min-height: 1.25em;
   padding: 0.25rem;
   border: 1px solid var(--color-text);
+  width: auto;
+  min-width: min(26ch, 80vw);
 }
 .input:disabled,
 .input:read-only {
