--- a/src/styles/Box.module.css
+++ b/src/styles/Box.module.css
@@ -5,41 +5,12 @@
   but maybe it could be useful to inherit the gap
   value down the DOM tree in the future.*/
   --gap: 4;
-  --gap-unit: 0.25rem;
-  gap: calc(var(--gap) * var(--gap-unit));
-
+  composes: gap from global;
   & > * {
+    max-width: 100%;
     flex: 0 0 auto;
   }
   &.h {
     flex-direction: row;
-  }
-  &.g-0 {
-    --gap: 0;
-  }
-  &.g-1 {
-    --gap: 1;
-  }
-  &.g-2 {
-    --gap: 2;
-  }
-  &.g-3 {
-    --gap: 3;
-  }
-  &.g-4 {
-    /* Default */
-    --gap: 4;
-  }
-  &.g-5 {
-    --gap: 5;
-  }
-  &.g-6 {
-    --gap: 6;
-  }
-  &.g-7 {
-    --gap: 7;
-  }
-  &.g-8 {
-    --gap: 8;
   }
 }
